# cukierka

./: .gitignore  .gitmodules  Cargo.toml  db.sql  docker-compose.yaml  license.md  log4rs.yml  pom.xml  readme.md
backend/: Cargo.toml
backend/src/: api.rs  apitool.rs  database.rs  main.rs  route.rs
backend/src/api/: api  apitool.rs  comment.rs  message.rs  mod.rs  project.rs  response.rs  resume.rs  token.rs  user.rs  vacancy.rs
cdn/: .gitignore  Cargo.toml
cdn/src/: main.rs
db/: db.psql  tables.sql  test.sql  view.sql
doc/: api  db.docx  dp.docx  ec.docx  gr.docx  llm.drawio  mm.drawio  report.bib  report.docx  report.tex  yd.docx
doc/diagram/: cm.drawio  dwi.drawio  fmd.drawio  диаграмма_вариантов_использования.drawio  диаграмма_развёртывания.drawio  ментальная_карта.drawio  структура_сайта.drawio
doc/paper/: templete.docx  преддипломная_практика.docx
doc/диаграммы/: диаграмма_вариантов_использования.drawio  диаграмма_последовательности.drawio  концептуальная_модель.drawio  физическая_модель_данных.drawio
frontend/: package-lock.json  package.json
frontend/old/: edit-product.html  index2.html  login.html  registration.html
frontend/src/: Header.tsx  index.tsx
nginx/: nginx.conf  nginxconfig.txt
nginx/sites/: localhost.conf
nginx/sites-available/: example.com.conf  localhost.conf
src/: config.rs  database.rs  db.rs  error.rs  main.rs  route.rs
src/api/: apitool.rs  base.rs  message.rs  mod.rs  project.rs  token.rs  user.rs  vacancy.rs
src/core/: mod.rs  user.rs
www/: !.html  account-edit.html  account.html  accounts.html  add-product.html  api.tsx  bar.html  chat.html  index.html  login.html  main.json  main.xml  products.html  registration.html  resume.html  roadmap.json  signin.html  signup.html  test.html  userbar.html
www/comment/: list.html
www/css/: bootstrap.min.css  container.css  form.css  tooplate.css
www/error/: 404.html  500.html  503.html
www/js/: api.js  auth.js  chart-draw.js  comment.js  common.js  main.js  project.js  signin.js  signup.js  tools.js  tooplate-scripts.js  tooplate-scripts2.js  user.js  userbar.js  vacancy.js  vlobo.js
www/project/: addbug.html  bugs.html  create.html  index.html  members.html  pbar.html
www/response/: index.html
(+86 files in other folders)
