[package]
name = "cukierka"
version = "0.4.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7", features = ["with-uuid-1"] }
uuid = "1.7.0"
warp = { version = "0.3", features = ["tls"] }
