[package]
name = "cukierka"
version = "0.5.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
warp = { version = "0.3", features = ["tls"] }
