[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
warp = "0.3.7"
